<resources>
    <string name="app_name">Coin</string>
    <string name="coin_name">Coin Name</string>
    <string name="coin_id">Coin Id</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="platform">Platform</string>
    <string name="description">Description</string>
    <string name="last_historical_data">Last Historical Data: </string>
    <string name="first_historical_data">First Historical Data: </string>
    <string name="date_added">Date Added: </string>
    <string name="category">Category: </string>
    <string name="cmc">COIN MARKET COP</string>
    <string name="cryptoCurrecy">CryptoCurrency</string>
    <string name="favorite">Favorite</string>
</resources>